--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 .title {
   margin: 40px;
+  font-family: "Roboto", sans-serif;
+  font-size: 48px;
 }
 
 body {
@@ -30,6 +32,7 @@ body {
   flex-direction: column-reverse;
   align-items: flex-end;
   justify-content: center;
+  font-family: "Roboto", sans-serif;
 }
 
 .buttonMatrix {
@@ -62,4 +65,7 @@ body {
 
 .zero {
   grid-column: span 2;
+  width: 130px;
+  height: 60px;
+  border-radius: 65px;
 }
