create function to handle 4 arithetic operations

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,9 @@ body {
 .operator {
   background-color: orange;
 }
+.equal {
+  background-color: orange;
+}
 
 .number {
   background-color: rgb(81, 81, 81);
